# langtest

./: pyproject.toml
.github/workflows/: build_and_test.yml
docs/: Gemfile
langtest/transform/: stereotype.py
sphinx/: sphinx_requirements.txt
